feat(auth): include user role in jwt access token